test_suite/alan-2022-examples/failing/001310_mutation.alan
source g6u begin call q() function end
